--- a/src/layout/l-section/_l-section.scss
+++ b/src/layout/l-section/_l-section.scss
@@ -41,14 +41,14 @@
 
 // Media queries 
   // Medium screen >750px
-  @mixin l-section--banner--screen-size_medium {
+  @mixin l-section--banner\@screen_medium {
     .l-section--banner {
     margin-top: 115px;
     }
   }
 
   // Large screen >850px
-  @mixin l-section--projects--screen-size_large {
+  @mixin l-section--projects\@screen_large {
     .l-section--projects {
       background: url("../img/projects/ipad.png");
       background-position-x: right;
@@ -59,7 +59,7 @@
   }
 
   // Max screen >1200px
-  @mixin l-section--projects--screen-size_mega {
+  @mixin l-section--projects\@screen_mega {
     .l-section--projects {
       background-size: auto;
     }
