Fix heading from shame.css

--- a/src/blocks/heading/_heading.scss
+++ b/src/blocks/heading/_heading.scss
@@ -29,6 +29,12 @@
     &--light {
       color: $grey-lvl5;
     }
+    &--margin_small {
+      margin-bottom: 60px;
+    }
+    &--margin_tiny {
+      margin-bottom: 20px;
+    }
   }
 }
 
