Use @supports rule for background-attachment property

--- a/src/layout/l-wrapper/_l-wrapper.scss
+++ b/src/layout/l-wrapper/_l-wrapper.scss
@@ -39,6 +39,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    @supports (background-attachment: fixed) {
+      background-attachment: fixed;  
+    }  
 }
 
 
