--- a/src/layout/l-wrapper/_l-wrapper.scss
+++ b/src/layout/l-wrapper/_l-wrapper.scss
@@ -39,6 +39,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: scroll;  
     @supports (background-attachment: fixed) {
       background-attachment: fixed;  
     }  
