--- a/src/layout/_media-queries.scss
+++ b/src/layout/_media-queries.scss
@@ -22,6 +22,7 @@
 
 // Portrait orientation
 @media only screen and (min-width: 640px), (orientation: portrait) {
+  @include l-section\@screen_portait;
   @include button--menu\@screen_potrait;
   @include header__wrapper\@screen_portait;
   @include menu__list--open\@screen_portait;
@@ -29,7 +30,7 @@
 
 // Medium screen (--screen-size_medium)
 @media only screen and (min-width: 750px) {
-  @include l-section--banner\@screen_medium;
+  @include l-section\@screen_medium;
   @include header__wrapper\@screen_medium;
   @include opinion\@screen_medium;
 }
