Add 'go-top' button

--- a/src/main.scss
+++ b/src/main.scss
@@ -72,7 +72,8 @@
     @import "blocks/copyright/copyright";
     @import "blocks/socials/socials"; 
     @import "blocks/button/button";
-    @import "blocks/preloader/preloader"; 
+    @import "blocks/preloader/preloader";
+    @import "blocks/go-top/go-top"; 
 
 
 /* Media Queries  ---------------------------------------------------- */
