--- a/src/blocks/go-top/_go-top.scss
+++ b/src/blocks/go-top/_go-top.scss
@@ -1,6 +1,6 @@
 .go-top {
   position: fixed;
-  bottom: 30px;
+  bottom: -50px;
   right: 30px;
   @include flexbox(center, center);
   @include box-shadow(0px, 0px, 19px, rgba(0, 0, 0, 0.6));
@@ -11,12 +11,17 @@
   font-size: $font-size-xs;
   color: $grey-lvl1;
   text-shadow: 0 1px 1px rgba(0, 0, 0, .7);
-  transition: all 300ms ease-in;
+  transition: all 400ms linear;
   z-index: 3;
   cursor: pointer;
+  opacity: 0;
     &:hover {
       background-color: $grey-lvl1;
       color: $grey-lvl8;
       text-shadow: none;
     }
+  &--showing {
+    opacity: 1;
+    bottom: 30px;
+  }
   }
