--- a/src/blocks/project/_project.scss
+++ b/src/blocks/project/_project.scss
@@ -2,6 +2,10 @@
   text-align: left;
   width: 100%;
   max-width: 470px;
+  opacity: 0;
+  transform: translateX(-300px) rotate(-90deg);
+  transition: all 600ms linear;
+  
 
   &__title {
     font-family: $font-second;
@@ -27,5 +31,11 @@
     font-family: $font-second;
     text-transform: uppercase;
     font-weight: 600;
+  }
+  
+  &--showing {
+    opacity: 1;
+    transform: translateX(0);
+    
   }
 }
