--- a/src/main.scss
+++ b/src/main.scss
@@ -62,6 +62,7 @@
     @import "blocks/logo/logo"; 
     @import "blocks/menu/menu"; 
     @import "blocks/heading/heading"; 
+    @import "blocks/banner/banner";
     @import "blocks/project/project";  
     @import "blocks/features/features"; 
     @import "blocks/feature/feature";  
