--- a/src/layout/l-wrapper/_l-wrapper.scss
+++ b/src/layout/l-wrapper/_l-wrapper.scss
@@ -3,6 +3,9 @@
     max-width: 940px;
     margin: 60px auto;
     z-index: 1;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 600ms linear;
   
   &--margin-tiny {
     margin: 40px auto;
@@ -28,6 +31,11 @@
       left: 0;
       z-index: -100;
     }
+  }
+  
+  &--showing {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
