--- a/src/layout/l-wrapper/_l-wrapper.scss
+++ b/src/layout/l-wrapper/_l-wrapper.scss
@@ -56,6 +56,8 @@
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+      opacity: 1;
+      transform: translateY(0);
 }
 
 
