--- a/src/blocks/button/_button.scss
+++ b/src/blocks/button/_button.scss
@@ -12,7 +12,7 @@
   border-radius: 7px;
   transition: all 300ms ease-in;
   z-index: 3;
-  &:hover {
+  &:hover, &:focus {
     background-color: $grey-lvl1;
     color: $color-main;
   }
@@ -20,7 +20,7 @@
   &--dark {
       border-color: $grey-lvl6;
       color: $grey-lvl6;
-      &:hover {
+      &:hover, &:focus {
           color: $grey-lvl8;
           border-color: $grey-lvl8;
       }
@@ -31,7 +31,7 @@
     align-items: center;
     height: 35px;
     padding: 0 10px;
-    &:hover .button__icon {
+    &:hover, &:focus .button__icon {
       stroke: $grey-lvl8;
       transition: all 300ms linear;
     }
@@ -89,7 +89,7 @@
     font-size: $font-size-xs;
     color: $grey-lvl1;
     text-shadow: 0 1px 1px rgba(0, 0, 0, .7);
-    &:hover {
+    &:hover, &:focus {
       color: $grey-lvl8;
       text-shadow: none;
     }
