--- a/static/main.css
+++ b/static/main.css
@@ -931,7 +931,7 @@ a:hover {
     align-items: center;
     height: 35px;
     padding: 0 10px; }
-    .button--menu:hover, .button--menu:focus .button__icon {
+    .button--menu:hover .button__icon, .button--menu:focus .button__icon {
       stroke: #222222;
       transition: all 300ms linear; }
   .button__icon-container {
