Hide menu with class --close

--- a/src/blocks/menu/_menu.scss
+++ b/src/blocks/menu/_menu.scss
@@ -1,7 +1,8 @@
 .menu {
   &__list {
-    display: none;
-
+    &--close {
+      display: none;
+    }
     &--open {
       position: absolute;
       top: 50px;
