--- a/static/main.css
+++ b/static/main.css
@@ -605,23 +605,23 @@ a:hover {
     text-transform: uppercase;
     color: #555555; }
 
-.menu__list {
+.menu__list--close {
   display: none; }
-  .menu__list--open {
-    position: absolute;
-    top: 50px;
-    height: calc(100vh - 50px);
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 270px;
-    background-color: #ffffff;
-    -webkit-box-shadow: 0 13px 12px rgba(0, 0, 0, 0.37);
-    -moz-box-shadow: 0 13px 12px rgba(0, 0, 0, 0.37);
-    box-shadow: 0 13px 12px rgba(0, 0, 0, 0.37);
-    align-items: center;
-    justify-content: space-around; }
+.menu__list--open {
+  position: absolute;
+  top: 50px;
+  height: calc(100vh - 50px);
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 270px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 13px 12px rgba(0, 0, 0, 0.37);
+  -moz-box-shadow: 0 13px 12px rgba(0, 0, 0, 0.37);
+  box-shadow: 0 13px 12px rgba(0, 0, 0, 0.37);
+  align-items: center;
+  justify-content: space-around; }
 .menu__item {
   display: inline-block;
   margin-left: 17px;
